Completed full data analysis with business insights

--- a/student-performance-analysis/notebooks/analysis.ipynb
+++ b/student-performance-analysis/notebooks/analysis.ipynb
@@ -1401,7 +1401,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 25,
    "id": "3bc0b1fb-50b9-470b-b404-4c805316ef2a",
    "metadata": {},
    "outputs": [
@@ -1436,12 +1436,37 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "id": "8df85eb5-cec1-4fed-aee1-6cef3e12ce56",
    "metadata": {},
+   "source": [
+    "## Final Conclusions & Recommendations\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8d586d45-9df9-4ec7-bffd-2d513ae31545",
+   "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "### Key Findings\n",
+    "\n",
+    "1. Study time has a positive effect on performance. Students who spend more hours studying achieve higher final percentage results.\n",
+    "\n",
+    "2. Attendance plays a key role in one’s success. A student with more absences tends to have lower grades.\n",
+    "\n",
+    "3. Previous academic results strongly influence final results. Poor results from previous academic performances place a student at high risk of poor results.\n",
+    "\n",
+    "4. Most of the students fall into the Average and Good Performance group, but interestingly, there is a considerable number of students who are at risk of failing.\n",
+    "\n",
+    "### Recommendations\n",
+    "\n",
+    "- Provide academic support programs for students who have had past failures.\n",
+    "- Foster regular attendance via monitoring and counseling.\n",
+    "- Identify at-risk students early using the previous grades (G1 & G2).\n",
+    "- Provide supplementary study materi"
+   ]
   }
  ],
  "metadata": {
